// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/src/components/button snapshot-test-1 1`] = `
<Base
  onClick={[Function]}
/>
`;

exports[`/src/components/button snapshot-test-2 1`] = `
"Snapshot Diff:
- <Base onClick={[Function onClick]} />
+ <Base onClick={[Function onClick]} text=\\"Hello automated\\" />

  <button
    className=\\"css-1e31kni-Base\\"
    onClick={[Function onClick]}
  >
-   Get started
+   Hello automated
  </button>"
`;

exports[`/src/components/button snapshot-test-3 1`] = `
"Snapshot Diff:
- <Base onClick={[Function onClick]} />
+ <Base background=\\"green\\" onClick={[Function onClick]} />

  <button
-   className=\\"css-1e31kni-Base\\"
+   className=\\"css-25suaw-Base\\"
    onClick={[Function onClick]}
  >
    Get started
  </button>"
`;
